yml update ECS Svcs Name - dior-fargate

--- a/.github/workflows/aws-ecs-ecr.yml
+++ b/.github/workflows/aws-ecs-ecr.yml
@@ -33,7 +33,7 @@ on:
 env:            
   AWS_REGION: us-east-1           
   ECR_REPOSITORY: diorng-3-15       
-  ECS_SERVICE: dior-cluster1         
+  ECS_SERVICE: dior-fargate         
   ECS_CLUSTER: dn-3-5                     
   CONTAINER_NAME: nginx         
                                                
